objects/SMAX_PS_InventoryCount__c.object
<CustomObject>
    <label>Inventory Count</label>
    <nameField>
        <displayFormat>INVC-{00000000}</displayFormat>
        <label>Inventory Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Tech Complete</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Recount Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_EventType__c</fullName>
        <label>Event Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_Date__c</fullName>
        <description>Date that the inventory count was done</description>
        <inlineHelpText>Date that the inventory count was done</inlineHelpText>
        <label>Count Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the inventory count record is deleted</description>
        <inlineHelpText>Denotes that the inventory count record is deleted</inlineHelpText>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician__c</fullName>
        <description>Shows the Preferred Technician from a location denoted as Stocking Location</description>
        <formula>SMAX_PS_RequestedFrom__r.SVMX_PS_Preferred_Technician__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Preferred Technician from a location denoted as Stocking Location</inlineHelpText>
        <label>Technician</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_PlannedDate__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DocumentDate__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BD_Platform_Event_Log__c</fullName>
        <formula>HYPERLINK(&quot;/apex/SMAX_PS_PlatformEventLog?RelatedID=&quot; &amp; Id &amp; &quot;&amp;RelatedName=&quot; &amp; Name, &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Event Log</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RequestedFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested From</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Inventory Counts</relationshipLabel>
        <relationshipName>Inventory_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_StatusOfCount__c</fullName>
        <description>Status A means that only some items have been counted. Status X means that all items have been counted.</description>
        <inlineHelpText>Status A means that only some items have been counted. Status X means that all items have been counted.</inlineHelpText>
        <label>Status of Count</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Recount_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that there is a recount required for the inventory count</description>
        <inlineHelpText>Denotes that there is a recount required for the inventory count</inlineHelpText>
        <label>Recount Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsBlockedForPosting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Blocked For Posting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RequestedTechnician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Inventory Counts</relationshipLabel>
        <relationshipName>Inventory_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Freeze_Book_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Freezes the Book Inventory for Inventory Count</description>
        <inlineHelpText>Denotes that the inventory count record is deleted</inlineHelpText>
        <label>Freeze Book Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Special_Stock_Indicator__c</fullName>
        <description>Denotes a list of special stock indicators</description>
        <inlineHelpText>Denotes a list of special stock indicators</inlineHelpText>
        <label>Special Stock Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&quot;E Orders on hand</fullName>
                </value>
                <value>
                    <fullName>K Consignment (vendor)</fullName>
                </value>
                <value>
                    <fullName>M Ret.trans.pkg vendor</fullName>
                </value>
                <value>
                    <fullName>O Parts prov. vendor</fullName>
                </value>
                <value>
                    <fullName>P Pipeline material</fullName>
                </value>
                <value>
                    <fullName>Q Project stock</fullName>
                </value>
                <value>
                    <fullName>V Ret. pkg w. customer</fullName>
                </value>
                <value>
                    <fullName>W Consignment (cust.)</fullName>
                </value>
                <value>
                    <fullName>Y Shipping unit (whse)&quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Found_Item_True_Count__c</fullName>
        <description>Count of Inventory Count Lines where Is Found Item field is TRUE. Used in Work Flow Email Alert</description>
        <inlineHelpText>Count of Inventory Count Lines where Is Found Item field is TRUE. Used in Work Flow Email Alert</inlineHelpText>
        <label>Is Found Item True Count</label>
        <summaryFilterItems>
            <field>SMAX_PS_InventoryCountLine__c.SMAX_PS_Found_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SMAX_PS_InventoryCountLine__c.SMAX_PS_InventoryCount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_StatusOfAdjustmentPosting__c</fullName>
        <description>Status A means that inventory differences have been posted for some of the items of the physical inventory document only. For these items, the physical inventory has been completed. Status X means that differences have been posted for all items of the physical inventory document. The document can now be archived.</description>
        <inlineHelpText>Status A means that inventory differences have been posted for some of the items of the physical inventory document only. For these items, the physical inventory has been completed. Status X means that differences have been posted for all items.</inlineHelpText>
        <label>Status of Adjustment Posting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>